# caching_proxy

./: .dockerignore  ARCHITECTURE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
scripts/: __init__.py  cli.py
src/: __init__.py  config.py  custom_openapi.py  main.py
src/db/: __init__.py  redis_client.py
src/middleware/: __init__.py  proxy_middleware.py
src/models/: __init__.py  misc.py
src/routes/: misc.py
src/services/: __init__.py  proxy_cache.py  proxy_service.py
src/utils/: logging.py
